# doichilathethoi

./: .env  .env.backup  .env.backup.20251210_070204  .env.microservices  .env.staging  .gitignore  ADMIN_APP_AUDIT_REPORT.md  ADMIN_APP_BUSINESS_EVALUATION.md  ADMIN_APP_COMPREHENSIVE_AUDIT_2025.md  ADMIN_MARKET_CONTROL_PROPOSAL.md  ADMIN_PLATFORM_COMPREHENSIVE_DOCUMENTATION.md  BACKEND_API_REFERENCE.md  BACKEND_ARCHITECTURE_AUDIT.md  BACKEND_DEPLOYMENT_SUCCESS.md  BAO_CAO_ADMIN_CONTROL_LOGIC.md  BAO_CAO_DOI_CHIEU_GITHUB.md  BAO_CAO_DON_DEP_KIEN_TRUC.md  BAO_CAO_KET_QUA_TRIEN_KHAI.md  BAO_CAO_KIEM_TRA_DU_AN.md  BAO_CAO_OPEX_SERVICES.md  BAO_CAO_SUA_LOI_API.md  BAO_CAO_TRIEN_KHAI.md  BAO_CAO_TRIEN_KHAI_REAL_TIME.md  CHANGELOG.md  CHANGELOG_INTEGRATION.md  CLIENT_INTEGRATION_SUMMARY.md  DATA_CONSISTENCY_REPORT_20251219_190033.md  DATA_CONSISTENCY_REPORT_20251219_190034.md  DATA_CONSISTENCY_REPORT_20251219_190035.md  DATA_CONSISTENCY_REPORT_20251220_010002.md  DATA_HEALTH_REPORT_20251219_190034.md  DATA_HEALTH_REPORT_20251220_010002.md  DEPLOYMENT.md  DEPLOYMENT_QUICK_REFERENCE.md  DEPLOY_QUICK_REFERENCE.md  FINAL_INTEGRATION_COMPLETE.md  IMPLEMENTATION_SUMMARY.md  INTEGRATION_FINAL_SUMMARY.md  INTEGRATION_SUMMARY.md  KE_HOACH_HOAN_THIEN_25_PHAN_TRAM.md  (+40 more)
backend/: .env  .env.example  .gitignore  Dockerfile  REDIS_CONFIGURATION.md  create_test_user.py  create_test_user_temp.py  deploy_enhanced_market_data.sh  entrypoint.sh  main.py  pyproject.toml  requirements.txt  test_auth.db  test_auth.py  test_auth_api.db  test_comprehensive_auth.py  test_endpoints.py  test_endpoints.sh
(+1000 files in other folders)
